# narigama-aoc

./: .gitignore  Cargo.toml
benches/: aoc2022.rs
src/: lib.rs  util.rs
src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  mod.rs
tools/: gen_features.py  template.rs
